--- a/src/assets/mixin.less
+++ b/src/assets/mixin.less
@@ -2,3 +2,17 @@
   display: flex;
   align-items: center;
 }
+
+.cursor() {
+  cursor: pointer;
+  user-select: none;
+}
+
+.h-lh(@h) {
+  height: @h;
+  line-height: @h;
+}
+
+.border(@color) {
+  border: 1px solid @color;
+}
