--- a/src/assets/mixin.less
+++ b/src/assets/mixin.less
@@ -3,6 +3,12 @@
   align-items: center;
 }
 
+.flex-center() {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .cursor() {
   cursor: pointer;
   user-select: none;
